@@ -61,3 +61,4 @@ CAY-1755 FaultFailureException resolving relationships to UNIQUE non-PK columns
 CAY-1757 ROP: Faulting entity relationship resets uncommitted modifications made to its reverse relationship 
 CAY-1774 EhCacheQueryCache.get(QueryMetadata, QueryCacheEntryFactory) returns null if EhCache instance for group is not present
 CAY-1780 cdbimport do not create xml file in resource folder
+CAY-1782 Deadlock when performing many concurrent inserts
